syntax = "proto3";

package order;
option go_package = "/order/orderpb";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order) {}
  rpc GetOrder(GetOrderRequest) returns (Order) {}
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  float totalPrice = 4;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  float price = 3;
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
}

message GetOrderRequest {
  string order_id = 1;
}